--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -114,9 +114,9 @@ add_dependencies(P2P version)
 add_dependencies(cryptotest version)
 
 # Finally build the binaries
-set_property(TARGET TurtleCoind PROPERTY OUTPUT_NAME "TurtleCoind")
+set_property(TARGET TurtleCoind PROPERTY OUTPUT_NAME "GarudaCashd")
 set_property(TARGET zedwallet PROPERTY OUTPUT_NAME "zedwallet")
-set_property(TARGET service PROPERTY OUTPUT_NAME "turtle-service")
+set_property(TARGET service PROPERTY OUTPUT_NAME "garudacash-service")
 set_property(TARGET miner PROPERTY OUTPUT_NAME "miner")
 set_property(TARGET cryptotest PROPERTY OUTPUT_NAME "cryptotest")
 
